# audio-notes-app

./: .dockerignore  .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  .ruff.toml  CHANGELOG_SESSION.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.worker  QUICKSTART.md  README.md  SWAGGER_AUTH_IMPLEMENTATION.md  TEST_E2E_README.md  UPLOAD_TEST_README.md  alembic.ini  codecov.yml  debug_create.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  simple_audio_test.py  test-requirements.txt  test_case_insensitive.py  test_complete_auth.sh  test_filters.py  test_full_flow_with_auth.py  test_real_audio_mp3.py  test_websocket.py  websocket_test.py
.github/: labeler.yml
.github/workflows/: ci.yml  dependency-review.yml  pr-checks.yml
alembic/: env.py
alembic/versions/: 089602b2c740_add_text_notes_to_audio_notes.py  4be81a10396a_remove_foreign_key_user_id.py  5058e7464528_create_users_and_audio_notes_tables.py  5082b6830963_change_user_id_to_string.py
app/: main.py
app/api/: __init__.py
app/api/routes/: __init__.py  audio_notes.py  auth_helper.py  websocket.py
app/auth/: __init__.py  config.py  dependencies.py  hooks.py
app/core/: __init__.py  config.py  exceptions.py  rate_limit.py  security.py  supertokens.py
app/db/: __init__.py  base.py  database.py  models.py
app/schemas/: __init__.py  audio_note.py
app/services/: __init__.py  audio_note.py  queue.py
app/workers/: __init__.py  __main__.py  summarization_worker.py  transcription_worker.py  transcription_worker_http.py
tests/: __init__.py  conftest.py  test_api_notes.py  test_auth.py  test_workers.py
