[project]
name = "audio-notes-app"
version = "0.1.0"
description = "Audio notes web application with FastAPI, PostgreSQL, RabbitMQ, and AI transcription"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.17",
    "aio-pika>=9.5.0",
    "httpx>=0.28.0",
    "supertokens-python>=0.27.0",
    "deepgram-sdk>=3.8.0",
    "google-generativeai>=0.8.3",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
